examples/test/testpolicy18382.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18382
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key41: value31
      key45: value7
      key48: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value22
          key31: value22
          key9: value23
